--- a/answer/style-ans.css
+++ b/answer/style-ans.css
@@ -9,11 +9,10 @@ header{
   background-color:#ff9a4b;
 }
 
-
 main{
   width:960px;
   margin:50px auto;
-  background-color: palegreen;
+  display:flex;
 }
 
 .step-box{
@@ -24,6 +23,10 @@ main{
   background-color:#eee;
 }
 
+.step-box:last-child{
+  margin-right: 0;
+}
+
 .step-num{
   position:absolute;
   top:0;
@@ -32,13 +35,26 @@ main{
   color:#fff;
 }
 
-.step-img{
+.step-img1{
   height: 150px;
   background-image: url(../img/flow01.png);
   background-size: cover;
   background-position: bottom;
 }
 
+.step-img2{
+  height: 150px;
+  background-image: url(../img/flow02.png);
+  background-size: cover;
+  background-position: bottom;
+}
+
+.step-img3{
+  height: 150px;
+  background-image: url(../img/flow03.png);
+  background-size: cover;
+  background-position: bottom;
+}
 
 .title{
   margin:15px 0 5px;
